Fix IE layout problem on select

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -351,3 +351,7 @@ div.dataTables_filter label {
 div.dataTables_filter {
     float: right;
 }
+
+.collapse {
+  overflow: visible;
+}
